Добавил состав продукта

--- a/src/main/webapp/WEB-INF/views/table/allStaff.html
+++ b/src/main/webapp/WEB-INF/views/table/allStaff.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -29,6 +29,7 @@
         <td><span th:text="${staff.getPhoneNumber}"> Author </span></td>
         <td><span th:text="${staff.getEmail}"> Author </span></td>
         <td><span th:text="${staff.getPost}"> Author </span></td>
+        <td><span th:text="${staff.getBirthday}"> Author </span></td>
         <td><span th:text="${staff.getBirthday}"> Author </span></td>
         <td><span th:text="${staff.GetisWorking}"> Author </span></td>
         <td><span th:text="${staff.getDateOfHire}"> Author </span></td>
