полность сделанный таблица сотрудники2

--- a/src/main/webapp/WEB-INF/views/table/findStaff.html
+++ b/src/main/webapp/WEB-INF/views/table/findStaff.html
@@ -125,8 +125,8 @@ button {
     </tr>
     </tbody>
 </table>
-<form th:method="GET" th:action="@{/staff/updateStaff/{id} (id=${staff.getId})}">
-    <button>Добавить нового сотрудника</button>
+<form th:method="GET" th:action="@{/staff/addStaff}">
+    <input type="submit" value="Добавить нового сотрудника">
 </form>
 </body>
 </html>
