--- a/src/main/webapp/WEB-INF/views/table/updateStafff.html
+++ b/src/main/webapp/WEB-INF/views/table/updateStafff.html
@@ -4,6 +4,50 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+    input[type=text], select {
+        width: 100%;
+        padding: 6px 10px;
+        margin: 2px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    input[type=text]:focus {
+        border: 3px solid #555;
+    }
+    input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+    button {
+        background-color: #f44336;
+        border-radius: 8px;
+        color: white;
+        padding: 4px 8px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 12px;
+        margin: 6px 3px;
+        cursor: pointer;
+    }
+
+
+
+
+</style>
 <body>
 <form style="" th:method="PATCH" th:action="@{/staff/updateStaff/{id} (id=${staff.getId()})}" th:object="${staff}">
     <br/><label for="name">Введите имя</label>
@@ -40,7 +84,7 @@
 
 
     <br/> <label for="birthday">Введите дату рождения</label>
-    <input type="text" th:field="*{birthday}" id="birthday">
+    <input type="date" th:field="*{birthday}" id="birthday">
     <div style="color: red" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}"></div>
 
     <br/> <label for="working">Введите статус</label>
@@ -63,11 +107,11 @@
     </select>
     <br/>
     <label for="dateOfHire">Введите день найма</label>
-    <input type="text" th:field="*{dateOfHire}" id="dateOfHire">
+    <input type="date" th:field="*{dateOfHire}" id="dateOfHire">
     <div style="color: red" th:if="${#fields.hasErrors('dateOfHire')}" th:errors="*{dateOfHire}"></div>
     <br/>
     <label for="dateOfSalary">Введите день повышения зарплаты</label>
-    <input type="text" th:field="*{dateOfSalary}" id="dateOfSalary">
+    <input type="date" th:field="*{dateOfSalary}" id="dateOfSalary">
     <div style="color: red" th:if="${#fields.hasErrors('dateOfSalary')}" th:errors="*{dateOfSalary}"></div>
     <br/>
     <input type="submit" value="Изменить">
