--- a/src/main/webapp/WEB-INF/views/COP/findCop.html
+++ b/src/main/webapp/WEB-INF/views/COP/findCop.html
@@ -64,27 +64,26 @@ button {
 <form style="" th:method="GET" th:action="@{/staff/findingStaffs}" th:object="${staff}">
     <label for="name">Введите имя</label>
     <input type="text" th:field="*{name}" id="name">
-<!--    <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>-->
+    <!--    <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>-->
 
 
     <label for="lastName">Введите фамилию</label>
     <input type="text" th:field="*{lastName}" id="lastName">
-<!--    <div style="color: red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>-->
+    <!--    <div style="color: red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>-->
 
     <label for="lastName">Введите почту</label>
     <input type="text" th:field="*{email}" id="email">
-<!--    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>-->
+    <!--    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>-->
 
 
     <label for="department.name">Отдел</label>
     <select  id="department.name" name="department.name">
         <option value="" >Все</option>
-        <option th:each="a:${dep}" th:selected="${staff.department.name==a.getName}" th:value="${a.getName}" th:text="${a.getName}">
-<!--        <option th:selected="*{department.name=='Бухгалтерия'}" value="Бухгалтерия">Бухгалтерия</option>-->
-<!--        <option th:selected="*{department.name=='Служба поддержки'}" value="Служба поддержки" >Служба поддержки</option>-->
-<!--        <option th:selected="*{department.name=='Отдел кадров'}" value="Отдел кадров">Отдел кадров</option>-->
-<!--        <option th:selected="*{department.name=='Отдел техобслуживания'}"value="Отдел техобслуживания">Отдел техобслуживания</option>-->
-<!--        <option th:selected="*{department.name=='Отдел ИТ'}" value="Отдел ИТ">Отдел ИТ</option>-->
+        <option th:selected="*{department.name=='Бухгалтерия'}" value="Бухгалтерия">Бухгалтерия</option>
+        <option th:selected="*{department.name=='Служба поддержки'}" value="Служба поддержки" >Служба поддержки</option>
+        <option th:selected="*{department.name=='Отдел кадров'}" value="Отдел кадров">Отдел кадров</option>
+        <option th:selected="*{department.name=='Отдел техобслуживания'}"value="Отдел техобслуживания">Отдел техобслуживания</option>
+        <option th:selected="*{department.name=='Отдел ИТ'}" value="Отдел ИТ">Отдел ИТ</option>
 
 
     </select>
