--- a/src/main/webapp/WEB-INF/views/table/findStaff.html
+++ b/src/main/webapp/WEB-INF/views/table/findStaff.html
@@ -76,8 +76,8 @@ button {
 <!--    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>-->
 
 
-    <label for="department.name">Отдел</label>
-    <select  id="department.name" name="department.name">
+    <label for="department">Отдел</label>
+    <select  id="department" name="department.name">
         <option value="" >Все</option>
         <option th:each="a:${dep}" th:selected="${staff.department.name==a.getName}" th:value="${a.getName}" th:text="${a.getName}">
 <!--        <option th:selected="*{department.name=='Бухгалтерия'}" value="Бухгалтерия">Бухгалтерия</option>-->
