--- a/src/main/webapp/WEB-INF/views/COP/findCop.html
+++ b/src/main/webapp/WEB-INF/views/COP/findCop.html
@@ -4,62 +4,16 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-input[type=text], select {
-  width: 100%;
-  padding: 6px 10px;
-  margin: 2px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-input[type=text]:focus {
-  border: 3px solid #555;
-}
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-button {
-    background-color: #f44336;
-    border-radius: 8px;
-    color: white;
-    padding: 4px 8px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    margin: 6px 3px;
-    cursor: pointer;
-}
-
-
-
-
-    </style>
-
-    <style>
         /* Стили таблицы (IKSWEB) */
         table.iksweb{text-decoration: none;border-collapse:collapse;width:100%;text-align:center;}
         table.iksweb th{font-weight:normal;font-size:14px; color:#ffffff;background-color:#354251;}
         table.iksweb td{font-size:13px;color:#354251;}
         table.iksweb td,table.iksweb th{white-space:pre-wrap;padding:10px 5px;line-height:13px;vertical-align: middle;border: 1px solid #354251;}	table.iksweb tr:hover{background-color:#f9fafb}
         table.iksweb tr:hover td{color:#354251;cursor:default;}
-
-
-
     </style>
+
 </head>
+<div th:insert="~{header :: #head}"></div>
 <body>
 <form style="" th:method="GET" th:action="@{/staff/findingStaffs}" th:object="${staff}">
     <label for="name">Введите имя</label>
