--- a/src/main/webapp/WEB-INF/views/Dep/addDep.html
+++ b/src/main/webapp/WEB-INF/views/Dep/addDep.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<div th:insert="~{header :: #head}"></div>
 <body>
-<form style="" th:method="POST" th:action="@{/department/addDepartment/{id} (id=${dep.getId()})}" th:object="${dep}">
+<form style="" th:method="POST" th:action="@{/department/addDepartment}" th:object="${dep}">
     <br/><label for="name">Введите название отдела</label>
     <input type="text" th:field="*{name}" id="name">
     <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
-    <input type="submit" value="Изменить">
+    <input type="submit" value="Добавить">
 
 </form>
 </body>
