--- a/src/main/webapp/WEB-INF/views/table/error.html
+++ b/src/main/webapp/WEB-INF/views/table/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
