--- a/src/main/webapp/WEB-INF/views/staff/findStaff.html
+++ b/src/main/webapp/WEB-INF/views/staff/findStaff.html
@@ -3,50 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-input[type=text], select {
-  width: 100%;
-  padding: 6px 10px;
-  margin: 2px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-input[type=text]:focus {
-  border: 3px solid #555;
-}
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-button {
-    background-color: #f44336;
-    border-radius: 8px;
-    color: white;
-    padding: 4px 8px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    margin: 6px 3px;
-    cursor: pointer;
-}
-
-
-
-
-    </style>
 
     <style>
         /* Стили таблицы (IKSWEB) */
@@ -72,7 +28,7 @@ button {
     <input type="text" th:field="*{lastName}" id="lastName">
 <!--    <div style="color: red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>-->
 
-    <label for="lastName">Введите почту</label>
+    <label for="email">Введите почту</label>
     <input type="text" th:field="*{email}" id="email">
 <!--    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>-->
 
