--- a/src/main/webapp/WEB-INF/views/header.html
+++ b/src/main/webapp/WEB-INF/views/header.html
@@ -64,7 +64,12 @@
                 <ul class="dropdown-menu">
                     <li><a href="/staff/findingStaffs">Сотрудники</a></li>
                     <li><a href="/department/findDepartment">Отделы</a></li>
-                    <li><a href="#">JavaScript</a></li>
+                    <li><a href="/maintenance/findMaintenance">Техобслуживание</a></li>
+                    <li><a href="/machine/findMachine">Оборудование</a></li>
+                    <li><a href="/material/find">Материалы</a></li>
+                    <li><a href="/product/findingProducts">Продукты</a></li>
+                    <li><a href="/machineType/find">Тип оборудования</a></li>
+                    <li><a href="/machineStatus/find">Статус оборудования</a></li>
                 </ul>
             </div>
         </div>
