--- a/src/main/webapp/WEB-INF/views/material/update.html
+++ b/src/main/webapp/WEB-INF/views/material/update.html
@@ -23,7 +23,7 @@
     <input type="number" th:field="*{price}" id="price">
     <div style="color: red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
     <br/>
-    <input type="submit" value="Поиск">
+    <input type="submit" value="Изменить">
 
 </form>
 </body>
