--- a/src/main/webapp/WEB-INF/views/header.html
+++ b/src/main/webapp/WEB-INF/views/header.html
@@ -53,7 +53,7 @@
     <header style="background:blue;height:30px">
         <div class="container">
             <div style="display: inline-block;color:white;">
-                <form th:method="GET" action="/staff/findingStaffs">
+                <form th:method="GET" action="/">
                 <button style="border:none;background:none;color:white;font-size: 16px;">Главная</button>
                 </form>
             </div>
