--- a/src/main/webapp/WEB-INF/views/machineStatus/add.html
+++ b/src/main/webapp/WEB-INF/views/machineStatus/add.html
@@ -6,7 +6,7 @@
 </head>
 <div th:insert="~{header :: #head}"></div>
 <body>
-<form style="" th:method="POST" th:action="@{machineStatus/add}" th:object="${obj}">
+<form style="" th:method="POST" th:action="@{/machineStatus/add}" th:object="${obj}">
     <label for="name">Введите название</label>
     <input type="text" th:field="*{name}" id="name">
     <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
