--- a/src/main/webapp/WEB-INF/views/material/find.html
+++ b/src/main/webapp/WEB-INF/views/material/find.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Продукты</title>
+    <title>Материалы</title>
 
     <style>
         /* Стили таблицы (IKSWEB) */
