--- a/src/main/webapp/WEB-INF/views/material/update.html
+++ b/src/main/webapp/WEB-INF/views/material/update.html
@@ -6,15 +6,13 @@
 </head>
 <div th:insert="~{header :: #head}"></div>
 <body>
-<form style="" th:method="POST" th:action="@{/material/add}" th:object="${material}">
-    <label for="name">Введите название продукта</label>
-    <label for="name">Введите название</label>
+<form style="" th:method="PATCH" th:action="@{/material/update}" th:object="${material}">
+    <label for="name">Введите название материала</label>
     <input type="text" th:field="*{name}" id="name">
     <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
     <br/>
     <label for="unitsOfMeasurement">Выберите единицы измерения</label>
     <select  id="unitsOfMeasurement" name="unitsOfMeasurement">
-        <option value="" >Любой</option>
         <option th:each="unit:${units}" th:selected="${material.getUnitsOfMeasurement()==unit}" th:value="${unit}" th:text="${unit}">
     </select>
 
@@ -23,7 +21,7 @@
     <input type="number" th:field="*{price}" id="price">
     <div style="color: red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
     <br/>
-    <input type="submit" value="Поиск">
+    <input type="submit" value="Изменить">
 
 </form>
 </body>
