Склад машин + часть manufacture

--- a/src/main/webapp/WEB-INF/views/header.html
+++ b/src/main/webapp/WEB-INF/views/header.html
@@ -70,6 +70,7 @@
                     <li><a href="/product/findingProducts">Продукты</a></li>
                     <li><a href="/machineType/find">Тип оборудования</a></li>
                     <li><a href="/machineStatus/find">Статус оборудования</a></li>
+                    <li><a href="/machineStorage/find">Склад оборудования</a></li>
                 </ul>
             </div>
         </div>
