--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -31,5 +31,6 @@
 <a class="btn" href="/machine/findMachine">Оборудование</a>
 <br><a class="btn" href="/machineType/find">Типы оборудования</a>
 <a class="btn" href="/machineStatus/find">Статусы оборудования</a>
+<a class="btn" href="/machineStorage/find">Статусы оборудования</a>
 </body>
 </html>
