--- a/src/main/webapp/WEB-INF/views/customer/error.html
+++ b/src/main/webapp/WEB-INF/views/customer/error.html
@@ -8,7 +8,7 @@
 <body>
 <dialog open style="border:1px solid red;border-radius: 2px;position: absolute;bottom: 50%">
     <div th:each="a : ${msg}" th:text="${a}"></div>
-    <form th:method="GET" action="/machineType/find">
+    <form th:method="GET" action="/customer/find">
         <button style="margin: 0 auto;display: block;">Ок</button>
     </form>
 </dialog>
