--- a/src/main/webapp/WEB-INF/views/header.html
+++ b/src/main/webapp/WEB-INF/views/header.html
@@ -71,7 +71,15 @@
                     <li><a href="/machineType/find">Тип оборудования</a></li>
                     <li><a href="/machineStatus/find">Статус оборудования</a></li>
                     <li><a href="/machineStorage/find">Склад оборудования</a></li>
+                    <li><a href="/manufacture/find">Производство</a></li>
+                    <li><a href="/materialStorage/find">Склад материала</a></li>
+                    <li><a href="/productStorage/find">Склад продуктов</a></li>
                 </ul>
+            </div>
+            <div style="display: inline-block;color:white;position:absolute;right:1px">
+                <form th:method="GET" action="/login">
+                    <button style="border:none;background:none;color:white;font-size: 16px;">сменить пользователя</button>
+                </form>
             </div>
         </div>
     </header>
