--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -31,6 +31,9 @@
 <a class="btn" href="/machine/findMachine">Оборудование</a>
 <br><a class="btn" href="/machineType/find">Типы оборудования</a>
 <a class="btn" href="/machineStatus/find">Статусы оборудования</a>
-<a class="btn" href="/machineStorage/find">Статусы оборудования</a>
+<a class="btn" href="/machineStorage/find">Склад оборудования</a>
+<a class="btn" href="/manufacture/find">Производство</a>
+<a class="btn" href="/materialStorage/find">Склад материала</a>
+<a class="btn" href="/productStorage/find">Склад продуктов</a>
 </body>
 </html>
